# Browser-Agent

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_SUMMARY.md  DELIVERY_SUMMARY.md  EXECUTION_REPORT.md  QUICKSTART.md  README.md  START_HERE.txt  advanced_config.py  browser_agent.py  browser_controller.py  browser_tools.py  config.py  demo.py  examples.py  logger_config.py  main.py  pyproject.toml  requirements.txt  run_agent.py  sample_tasks.json  setup.py  test_agent.py
