[project]
name = "browsser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "browser-use>=0.11.13",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
